<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:weightSum="1"
    android:background="@color/primary_background"
    tools:context=".course.AddCourseActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="-35dp"
        android:layout_gravity="center"
        android:text="Add or choose course"
        android:textStyle="bold"
        android:layout_weight="0.04" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.24"
        android:text="Enter a course key, then click on the 'Add' button to add a course. Click on a course in order to go to the chat room." />

    <EditText
        android:id="@+id/enter_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter course" />

    <Button
        android:id="@+id/add_course_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="20dip"
        android:background="@color/primary_button"
        android:text="Add course"

        android:textColor="@android:color/black" />

    <ListView
        android:id="@+id/courseview"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:layout_weight="0.35"
        android:background="@null"
        android:divider="@null"
        android:stackFromBottom="false"
        android:transcriptMode="alwaysScroll" />

</LinearLayout>
