<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:orientation="vertical"
    tools:context=".chat.StudActivity">

    <TextView
        android:id="@+id/chat_title"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Course key"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/msgview"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.01"
        android:background="@null"
        android:divider="@null"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/msg"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2" />

        <Button
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/primary_button"
            android:text="Send"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>
