...
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:weightSum="1">


        <Button
            android:id="@+id/add_course"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginTop="-30dip"

            android:background="@color/primary_button"
            android:text="Add/Choose course"
...
            android:background="@color/primary_button"
            android:text="About CHaTSiBot"
            android:textSize="25sp"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginTop="40dip"
            android:background="@color/primary_button"
            android:textSize="25sp"
            android:text="Sign out"
...
